src/objects/Competition_Analysis__c.object
<CustomObject>
    <fields>
        <fullName>Buyer_Persona__c</fullName>
        <inlineHelpText>Which buyer persona was the most influential?</inlineHelpText>
        <label>Buyer Persona</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>User Buyers</fullName>
                </value>
                <value>
                    <fullName>Coach</fullName>
                </value>
                <value>
                    <fullName>Technical Buyers</fullName>
                </value>
                <value>
                    <fullName>Financial Buyers</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cost_Overview__c</fullName>
        <inlineHelpText>How did cost have an impact in the opportunity? How was cost discussed? In relation to the competitors how did we fare?</inlineHelpText>
        <label>Cost Overview</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Current_BI_Incumbent__c</fullName>
        <inlineHelpText>Who is the current BI Incumbent?</inlineHelpText>
        <label>Current BI Incumbent</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Birst</fullName>
                </value>
                <value>
                    <fullName>BOARD International S.A.</fullName>
                </value>
                <value>
                    <fullName>Domo</fullName>
                </value>
                <value>
                    <fullName>Information Builders</fullName>
                </value>
                <value>
                    <fullName>Logi Analytics</fullName>
                </value>
                <value>
                    <fullName>Looker</fullName>
                </value>
                <value>
                    <fullName>Microsoft Power BI</fullName>
                </value>
                <value>
                    <fullName>MicroStrategy</fullName>
                </value>
                <value>
                    <fullName>Pentaho</fullName>
                </value>
                <value>
                    <fullName>Pyramid Analytics</fullName>
                </value>
                <value>
                    <fullName>Qlik Sense</fullName>
                </value>
                <value>
                    <fullName>Qlikview</fullName>
                </value>
                <value>
                    <fullName>Salesforce Wave</fullName>
                </value>
                <value>
                    <fullName>Tableau</fullName>
                </value>
                <value>
                    <fullName>TIBCO Spotfire</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>(800.000): Tableau</fullName>
                </value>
                <value>
                    <fullName>(801.000): IBM</fullName>
                </value>
                <value>
                    <fullName>(802.000): SAP</fullName>
                </value>
                <value>
                    <fullName>(803.000): Qlik</fullName>
                </value>
                <value>
                    <fullName>(804.000): Microsoft</fullName>
                </value>
                <value>
                    <fullName>(808.000): Salesforce</fullName>
                </value>
                <value>
                    <fullName>(810.000): Birst</fullName>
                </value>
                <value>
                    <fullName>(812.000): Board</fullName>
                </value>
                <value>
                    <fullName>(817.000): Domo</fullName>
                </value>
                <value>
                    <fullName>(827.000): Information Builders</fullName>
                </value>
                <value>
                    <fullName>(832.000): Logi Analytics</fullName>
                </value>
                <value>
                    <fullName>(833.000): Looker</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Contact_Text__c</fullName>
        <label>Customer Contact</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Final_Action__c</fullName>
        <label>Customer Final Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Purchased Competitor</fullName>
                </value>
                <value>
                    <fullName>No Purchase</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Edit_Link__c</fullName>
        <label>Edit Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Functional_Solution__c</fullName>
        <inlineHelpText>What was the primary functional solution of the opportunity?</inlineHelpText>
        <label>Functional Solution</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Facilities</fullName>
                </value>
                <value>
                    <fullName>HR</fullName>
                </value>
                <value>
                    <fullName>Customer Support</fullName>
                </value>
                <value>
                    <fullName>Field Service</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>(401.000): Sales</fullName>
                </value>
                <value>
                    <fullName>(402.000): Executive</fullName>
                </value>
                <value>
                    <fullName>(403.000): Marketing</fullName>
                </value>
                <value>
                    <fullName>(404.000): Finance</fullName>
                </value>
                <value>
                    <fullName>(409.000): IT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Identified_Budget__c</fullName>
        <inlineHelpText>Was there an identified budget?</inlineHelpText>
        <label>Identified Budget</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incumbent_Tenure__c</fullName>
        <label>Incumbent Tenure</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Current_BI_Incumbent__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>0-11 Months</fullName>
                </value>
                <value>
                    <fullName>1 Year</fullName>
                </value>
                <value>
                    <fullName>2 Years</fullName>
                </value>
                <value>
                    <fullName>3 Years</fullName>
                </value>
                <value>
                    <fullName>4+ Years</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Competition Analyses</relationshipLabel>
        <relationshipName>Competition_Analyses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Political_Landscape_Overview__c</fullName>
        <inlineHelpText>Provide a description of the political landscape. How Did it effect the opportunity?</inlineHelpText>
        <label>Political Landscape Overview</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Primary_BI_Competitor__c</fullName>
        <inlineHelpText>Who was the Primary BI Competitor?</inlineHelpText>
        <label>Primary BI Competitor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Birst</fullName>
                </value>
                <value>
                    <fullName>BOARD International S.A.</fullName>
                </value>
                <value>
                    <fullName>Domo</fullName>
                </value>
                <value>
                    <fullName>IBM Cognos Analytics</fullName>
                </value>
                <value>
                    <fullName>IBM Watson</fullName>
                </value>
                <value>
                    <fullName>Logi Analytics</fullName>
                </value>
                <value>
                    <fullName>Looker</fullName>
                </value>
                <value>
                    <fullName>Microsoft Power BI</fullName>
                </value>
                <value>
                    <fullName>Oracle OBIEE</fullName>
                </value>
                <value>
                    <fullName>Pentaho</fullName>
                </value>
                <value>
                    <fullName>Pyramid Analytics</fullName>
                </value>
                <value>
                    <fullName>Qlik Sense</fullName>
                </value>
                <value>
                    <fullName>Qlikview</fullName>
                </value>
                <value>
                    <fullName>SAP Business Objects</fullName>
                </value>
                <value>
                    <fullName>SAP Lumira</fullName>
                </value>
                <value>
                    <fullName>SAS</fullName>
                </value>
                <value>
                    <fullName>TIBCO Spotfire</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>(800.000): Tableau</fullName>
                </value>
                <value>
                    <fullName>(801.000): IBM</fullName>
                </value>
                <value>
                    <fullName>(802.000): SAP</fullName>
                </value>
                <value>
                    <fullName>(803.000): Qlik</fullName>
                </value>
                <value>
                    <fullName>(804.000): Microsoft</fullName>
                </value>
                <value>
                    <fullName>(808.000): Salesforce</fullName>
                </value>
                <value>
                    <fullName>(810.000): Birst</fullName>
                </value>
                <value>
                    <fullName>(812.000): Board</fullName>
                </value>
                <value>
                    <fullName>(817.000): Domo</fullName>
                </value>
                <value>
                    <fullName>(827.000): Information Builders</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_End_User__c</fullName>
        <inlineHelpText>Who is the customer&apos;s primary end user of this opportunity (ex. financial analysts, Store Managers, Executives, read only users)?</inlineHelpText>
        <label>Primary End User</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Primary_Loss_Reason__c</fullName>
        <label>Primary Loss Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Financial</fullName>
                </value>
                <value>
                    <fullName>Technological</fullName>
                </value>
                <value>
                    <fullName>Political</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Win_Reason__c</fullName>
        <label>Primary Win Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Financial</fullName>
                </value>
                <value>
                    <fullName>Technological</fullName>
                </value>
                <value>
                    <fullName>Political</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Revenue_Effect_Overview__c</fullName>
        <inlineHelpText>In depth please describe how MicroStrategy was positioned to increase the customer’s revenue in this opportunity.</inlineHelpText>
        <label>Revenue Effect Overview</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Satisfaction_Level_with_Incumbent__c</fullName>
        <inlineHelpText>What was their satisfaction level with the Incumbent? How long have they been using their service?</inlineHelpText>
        <label>Satisfaction Level with Incumbent</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Current_BI_Incumbent__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Very Satisfied</fullName>
                </value>
                <value>
                    <fullName>Content</fullName>
                </value>
                <value>
                    <fullName>Not Satisfied</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tech_Eval_Performed__c</fullName>
        <label>Technical Evaluation Performed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Technical_Overview__c</fullName>
        <inlineHelpText>How did technology have an impact in the opportunity? Provide a description of the technical needs of the customer/opportunity and the discussions regarding technology that were had.</inlineHelpText>
        <label>MSTR Technical Overview</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Technical_Presentations__c</fullName>
        <label>Technical Presentation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Demo</fullName>
                </value>
                <value>
                    <fullName>POC</fullName>
                </value>
                <value>
                    <fullName>Demo &amp; POC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Technical_Solution__c</fullName>
        <inlineHelpText>What was the primary technical solution of the opportunity?</inlineHelpText>
        <label>Technical Solution</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Data Discovery</fullName>
                </value>
                <value>
                    <fullName>Embedded Analytics</fullName>
                </value>
                <value>
                    <fullName>B2B/B2C Mobile Apps</fullName>
                </value>
                <value>
                    <fullName>Employee Access</fullName>
                </value>
                <value>
                    <fullName>Multi-Channel Customer Experience</fullName>
                </value>
                <value>
                    <fullName>MicroStrategy Cloud</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>(450.000): Enterprise Analytics</fullName>
                </value>
                <value>
                    <fullName>(451.000): Big Data</fullName>
                </value>
                <value>
                    <fullName>(454.000): Mobile Analytics</fullName>
                </value>
                <value>
                    <fullName>(455.000): Mobile Productivity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Cost_of_Ownership__c</fullName>
        <inlineHelpText>Was Total Cost of Ownership a significant factor in the customer&apos;s final decision?</inlineHelpText>
        <label>TCO Impact</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>View__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Id, &quot;View&quot;, &quot;_Parent&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Winner_Actions__c</fullName>
        <inlineHelpText>What did the winner do to outperform the competition in the presentation, POC, or Demonstration of the product?</inlineHelpText>
        <label>Presentation Overview/Winner Actions</label>
        <type>TextArea</type>
    </fields>
    <label>Competition Analysis</label>
    <nameField>
        <label>Competition Analysis Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Competition Analyses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>